# webx-session-manager

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  History.md  README.md  config.example.yml
.github/workflows/: build-and-publish-deb.yml
debian-scripts/: webx-session-manager.postinst  webx-session-manager.prerm  webx-session-manager.service
docker/: Dockerfile  Dockerfile.debian  Dockerfile.ubuntu
src/: lib.rs  main.rs
src/authentication/: authenticator.rs  credentials.rs  mod.rs
src/common/: account.rs  error.rs  mod.rs  process.rs  resolution.rs  session.rs  settings.rs  xlock.rs
src/common/transport/: encoder.rs  mod.rs  request.rs  response.rs
src/dto/: mod.rs  session.rs
src/fs/: mod.rs
src/services/: client.rs  mod.rs  server.rs  session.rs  xorg.rs
