[package]
name = "webx-session-manager"
version = "0.1.0"
edition = "2018"

[dependencies]
libc = "0.2.108"
rand = "0.8.4"
users = "0.11.0"
nix = "0.23.0"
pam-client = "0.3.1"
structopt = "0.3.25"
env_logger = "0.9.0"
log = "0.4.14"
zmq = "0.9.2"
ctrlc = "3.2.1"
serde_json = "1.0.74"
serde = { version = "1.0.33", features = ["derive"] }
walkdir = "2.3.2"
regex = "1.5.4"
sysinfo = "0.22.5"
config = "0.11.0"
dotenv = "0.15.0"
prettytable-rs = "0.8.0"
os_pipe = "1.0.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
shared_child = "1.0.0"
tokio = { version = "1.6.0", features = ["full", "time"] }
futures = "0.3"
futures-util = "0.3.4"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"
