[package]
name = "webx-session-manager"
description = "The WebX Session Manager listens for session requests, authenticates a user's credentials and creates sessions by launching Xorg and window manager processes."
version = "0.1.0"
edition = "2018"

[dependencies]
libc = "0.2.108"
rand = "0.8.4"
users = "0.11.0"
nix = "0.23.0"
pam-client = "0.3.1"
structopt = "0.3.25"
env_logger = "0.9.0"
log = "0.4.14"
zmq = "0.9.2"
ctrlc = "3.2.1"
serde_json = "1.0.74"
serde = { version = "1.0.33", features = ["derive"] }
regex = "1.5.4"
config = "0.11.0"
dotenv = "0.15.0"
prettytable-rs = "0.8.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
shared_child = "1.0.0"
tokio = { version = "1.6.0", features = ["full", "time"] }
signal-hook = "0.3.13"
rpassword = "5.0.1"


[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[package.metadata.deb]
maintainer = "Jamie Hall <hall@ill.fr>"
copyright = "2022, Institut Laue Langevin"
license-file = ["LICENSE", "0"]
extended-description = ""
depends = "$auto, xorgxrdp, dbus-x11"
recommends = "xfce4"
section = "net"
priority = "optional"
maintainer-scripts = "debian-scripts"
systemd-units = {}
conf-files = ["/etc/webx/webx-session-manager-config.yml", "/etc/webx/webx-session-manager/startwm.sh"]
assets = [
    ["target/release/server", "usr/bin/webx-session-manager", "755"],
    ["config.example.yml", "/etc/webx/webx-session-manager-config.yml", "644"],
    ["bin/pam-webx", "/etc/pam.d/webx", "644"],
    ["bin/startwm.sh", "/etc/webx/webx-session-manager/startwm.sh", "755"],
]
