[package]
name = "webx-session-manager"
description = "The WebX Session Manager listens for session requests, authenticates a user's credentials and creates sessions by launching Xorg and window manager processes."
version = "0.0.0-dev"
edition = "2018"

[dependencies]
libc = "0.2"
rand = "0.9"
users = "0.11"
nix = { version = "0.29", features = ["user"] }
pam-client2 = "0.5"
structopt = "0.3"
env_logger = "0.11"
log = "0.4"
zmq = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.11"
config = "0.15"
dotenv = "0.15"
prettytable-rs = "0.10"
uuid = { version = "1.13", features = ["serde", "v4"] }
shared_child = "1.0"
tokio = { version = "1.43.0", features = ["full", "time"] }
signal-hook = "0.3"
rpassword = "7.3"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[package.metadata.deb]
maintainer = "Jamie Hall <hall@ill.fr>"
copyright = "2022, Institut Laue Langevin"
license-file = ["LICENSE", "0"]
extended-description = ""
depends = "$auto, xorgxrdp, dbus-x11"
recommends = "xfce4"
section = "net"
priority = "optional"
maintainer-scripts = "debian-scripts"
systemd-units = {}
conf-files = ["/etc/webx/webx-session-manager-config.yml", "/etc/webx/webx-session-manager/startwm.sh"]
assets = [
    ["target/release/server", "usr/bin/webx-session-manager", "755"],
    ["target/release/client", "usr/bin/webx-session-manager-client", "755"],
    ["config.example.yml", "/etc/webx/webx-session-manager-config.yml", "644"],
    ["bin/pam-webx", "/etc/pam.d/webx", "644"],
    ["bin/startwm.sh", "/etc/webx/webx-session-manager/startwm.sh", "755"],
]
